--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "8000:8000"
     container_name: django
     hostname: django
+    extra_hosts:
+      - "my_db_host:${MY_DB_HOST}"
     environment:
       - DB_PASSWORD=${DB_PASSWORD}
       - SECRET_KEY=${SECRET_KEY}
