--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     image: django_demo
     ports:
       - "8000:8000"
-    container_name: app
-    hostname: app
+    container_name: django_demo
+    hostname: django_demo
     extra_hosts:
       - "${MY_DB_HOST}"
     environment:
